Refine attribute command namespaces